--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          </div>
         <div class="button-previous-current">
                 <img src="img/Previous_two.png" onclick="previous()" class="buttons previous" alt="">
-                <img src="img/pouse.png" onclick="pouseInterval()" class="buttons previous-play" alt="">
+                <img src="img/Pouse.jpg" onclick="pouseInterval()" class="buttons previous-play" alt="">
                 <img src="img/Play.png" onclick="startInterval()" class="buttons next-play" alt="">
                 <img src="img/Next_two.png" onclick="next()" class="buttons current" alt="">
         </div>
